--- a/legal_advice_project/src/index.css
+++ b/legal_advice_project/src/index.css
@@ -98,7 +98,7 @@ button:focus-visible {
       left: 3%;
       transform: translateY(-50%);
       width: 88%;
-      max-width: 1500px;*/
+      max-width: 1500px;
       min-width: 300px;     /* 最小寬度限制，避免在小螢幕上太窄 */
       height: 85%;
       background-color: #616161;
