--- a/legal_advice_project/src/index.css
+++ b/legal_advice_project/src/index.css
@@ -69,10 +69,10 @@ button:focus-visible {
 .drawer {
   position: fixed;
   right: -200px;
-  top: 6%;
+  top: 7%;
   width: 300px;
   min-width: 300px;     /* 最小寬度限制，避免在小螢幕上太窄 */
-  height: 85%;
+  height: 82%;
   background-color: #616161;
   color: white;
   transition: right 0.3s ease;
@@ -120,6 +120,7 @@ button:focus-visible {
 }
 
 .upload-zone {
+  display: none;
   text-align: center;
 }
 
@@ -188,6 +189,15 @@ button:focus-visible {
 .banner-btn:hover {
   background-color: #666;
 }
+
+.visible {
+  display: block;
+}
+
+.hidden {
+  display: none;
+}
+
 
 
 @media (max-width: 768px) {
