--- a/legal_advice_project/src/index.css
+++ b/legal_advice_project/src/index.css
@@ -26,7 +26,7 @@ body {
   margin: 0;
   /* display: flex; */
   /* place-items: center; */
-  background-color: #0f158a;
+  background-color: #081666;
   width: 100%;
   height: 100vh;
   /* min-width: 320px;
@@ -72,7 +72,7 @@ button:focus-visible {
   top: 7%;
   width: 300px;
   min-width: 300px;     /* 最小寬度限制，避免在小螢幕上太窄 */
-  height: 82%;
+  height: 83%;
   background-color: #616161;
   color: white;
   transition: right 0.3s ease;
@@ -120,16 +120,21 @@ button:focus-visible {
 }
 
 .upload-zone {
-  display: none;
+  display: block;
   text-align: center;
+  width: 100%;
+  height: 100%;
+  z-index: 1040;
 }
 
 .upload-zone input[type="file"] {
   margin-bottom: 10px;
+  z-index: 1040;
 }
 
 .file-info {
   margin-top: 10px;
+  z-index: 1040;
 }
 
 .remove-btn {
@@ -198,7 +203,12 @@ button:focus-visible {
   display: none;
 }
 
-
+.openbutt{
+  position: fixed;
+  right: 200px;
+  top: 7%;
+  z-index: 2000;
+}
 
 @media (max-width: 768px) {
       .rectangle {
