--- a/legal_advice_project/src/index.css
+++ b/legal_advice_project/src/index.css
@@ -167,9 +167,9 @@ button:focus-visible {
 
 .banner {
   position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
+  top: 1.5%;
+  left: 3%;
+  width: 95%;
   height: 60px;
   background-color: #1e1e1e;
   display: flex;
@@ -177,6 +177,8 @@ button:focus-visible {
   align-items: center;
   z-index: 1000;
   transition: height 0.3s ease;
+  border-radius: 20px;
+  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.3);
 }
 
 
