--- a/legal_advice_project/src/index.css
+++ b/legal_advice_project/src/index.css
@@ -111,7 +111,7 @@ button:focus-visible {
 }
 
 .centerarea.drag-over {
-  background-color: #e0f7ff;
+  background-color: #e0e2ff;
   border-color: #00aaff;
 }
 
@@ -136,7 +136,13 @@ button:focus-visible {
   margin-top: 10px;
   z-index: 1040;
 }
-
+.infooff{
+  display: none;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  z-index: 1040;
+}
 .remove-btn {
   background-color: #ff4d4d;
   color: white;
