--- a/legal_advice_project/src/index.css
+++ b/legal_advice_project/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #0f0e17;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -26,7 +26,7 @@ body {
   margin: 0;
   /* display: flex; */
   /* place-items: center; */
-  background-color: #081666;
+  background-color: #004643;
   width: 100%;
   height: 100vh;
   /* min-width: 320px;
@@ -73,8 +73,8 @@ button:focus-visible {
   width: 300px;
   min-width: 300px;     /* 最小寬度限制，避免在小螢幕上太窄 */
   height: 83%;
-  background-color: #616161;
-  color: white;
+  background-color: #001e1d;
+  color: #fffffe;
   transition: right 0.3s ease;
   padding: 10px;
   margin: 20px auto;
@@ -101,7 +101,8 @@ button:focus-visible {
       max-width: 1700px;
       min-width: 300px;     /* 最小寬度限制，避免在小螢幕上太窄 */
       height: 85%;
-      background-color: #616161;
+      background-color: #001e1d;
+      color:#fffffe;
       margin: 20px auto;
       opacity: 0.7; 
       border-radius: 20px;
@@ -111,7 +112,7 @@ button:focus-visible {
 }
 
 .centerarea.drag-over {
-  background-color: #e0e2ff;
+  background-color: #abd1c6;
   border-color: #00aaff;
 }
 
@@ -177,7 +178,7 @@ button:focus-visible {
   left: 3%;
   width: 95%;
   height: 60px;
-  background-color: #1e1e1e;
+  background-color: #001e1d;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -189,8 +190,8 @@ button:focus-visible {
 
 
 .banner-btn {
-  background-color: #444;
-  color: white;
+  background-color: #e2a953;
+  color: #001e1d;
   border: none;
   padding: 10px 15px;
   font-size: 16px;
@@ -201,6 +202,7 @@ button:focus-visible {
 
 .banner-btn:hover {
   background-color: #666;
+  color:#fffffe;
 }
 
 .visible {
